animate.style , animation , icons

--- a/css-site/index.html
+++ b/css-site/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>I'm Vaibhav</title>
+
+    <!-- animate css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <!-- fa css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    />
+
+    <!-- custom css -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,7 +27,7 @@
         src="https://imdivyanshi.netlify.app/images/cloud.png"
         alt="c1"
       />
-      <h1>I'm Vaibhav Joshi</h1>
+      <h1 class="animate__animated animate__wobble">I'm Vaibhav Joshi</h1>
       <h2 class="level-2">A Web Developer</h2>
       <img
         class="cloud c2"
@@ -21,10 +35,33 @@
         alt="c2"
       />
       <img
+        class="cloud c3"
+        src="https://imdivyanshi.netlify.app/images/cloud.png"
+        alt="c3"
+      />
+      <img
         class="mount"
         src="https://imdivyanshi.netlify.app/images/mountain.png"
         alt="m"
       />
+    </div>
+
+    <hr />
+
+    <!-- footer -->
+    <div id="footer">
+      <a href="">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+
+      <a href="">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href=""> <i class="fa-brands fa-linkedin"></i> </a>
+      <a href="">
+        <i class="fa-brands fa-youtube"></i>
+      </a>
+      <p>&copy; Copyright 2025</p>
     </div>
   </body>
 </html>
