--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -25,6 +25,33 @@
       <div class="b1 box">1</div>
       <div class="b2 box">2</div>
       <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
+      <div class="b1 box">1</div>
+      <div class="b2 box">2</div>
+      <div class="b3 box">3</div>
     </div>
 
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non recusandae
