--- a/school_site/index.html
+++ b/school_site/index.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I'm Vaibhav</title>
-
-    <!-- animate css -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    <title>Dehradun School</title>
 
     <!-- fa css -->
     <link
@@ -21,34 +15,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="header">
-      <img
-        class="cloud c1"
-        src="https://imdivyanshi.netlify.app/images/cloud.png"
-        alt="c1"
-      />
-      <h1 class="animate__animated animate__wobble">I'm Vaibhav Joshi</h1>
-      <h2 class="level-2">A Web Developer</h2>
-      <img
-        class="cloud c2"
-        src="https://imdivyanshi.netlify.app/images/cloud.png"
-        alt="c2"
-      />
-      <img
-        class="cloud c3"
-        src="https://imdivyanshi.netlify.app/images/cloud.png"
-        alt="c3"
-      />
-      <img
-        class="mount"
-        src="https://imdivyanshi.netlify.app/images/mountain.png"
-        alt="m"
-      />
-    </div>
+    <nav>
+      <a href="" class="logo">Dehradun School</a>
+      <ul class="nav_links">
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#blogs">BLOGS</a></li>
+        <li><a href="#features">FEATURES</a></li>
+        <li><a href="#courses">COURSES</a></li>
+      </ul>
+      <ul class="social_links">
+        <li>
+          <a href=""> <i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li>
+          <a href=""> <i class="fa-brands fa-linkedin"></i></a>
+        </li>
+        <li>
+          <a href=""> <i class="fa-brands fa-instagram"></i></a>
+        </li>
+        <li>
+          <a href=""> <i class="fa-brands fa-youtube"></i></a>
+        </li>
+      </ul>
+    </nav>
 
-    <hr />
-
-    <div id="blogs">
+    <!-- blogs -->
+    <div id="blogs" class="wrapper">
       <div class="blogs-header">
         <div class="content">
           <h2 class="level-2">Write What you Know</h2>
@@ -113,22 +105,6 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <!-- footer -->
-    <div id="footer">
-      <a href="">
-        <i class="fa-brands fa-facebook"></i>
-      </a>
-
-      <a href="">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href=""> <i class="fa-brands fa-linkedin"></i> </a>
-      <a href="">
-        <i class="fa-brands fa-youtube"></i>
-      </a>
-      <p>&copy; Copyright 2025</p>
     </div>
   </body>
 </html>
