feat: Introduce new JavaScript files for operators, control flow, and cfs, update JS index.html script, and add Bootstrap project configuration with minor styling adjustments.

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div id="features">
+    <div id="features" class="wrapper">
       <div class="row justify-content-between">
         <div class="shadow-sm text-center rounded p-5 col-lg-3 col-md-6">
           <i class="fa-brands fa-react display-3 mb-3"></i>
@@ -99,7 +99,7 @@
         data-ride="carousel"
       >
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item wrapper active">
             <h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
               neque ipsa vel non! Lorem ipsum dolor sit, amet consectetur
@@ -112,7 +112,7 @@
             />
             <span>Joe , New York</span>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item wrapper">
             <h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
               neque ipsa vel non! Lorem ipsum dolor sit amet consectetur
@@ -144,6 +144,55 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
+      </div>
+    </div>
+
+    <div id="pricing" class="wrapper text-center">
+      <h2 class="level-2">A Plan for Every Dog's Needs</h2>
+      <p>Simple and affordable price for all your dogs</p>
+      <div class="row mt-5">
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Chihuahua</h3>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">FREE</h3>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App, Web & Mobile</p>
+              <button class="btn btn-outline-dark btn-block">SIGN UP</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Labrador</h3>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">$10 / mo</h3>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App, Web & Mobile</p>
+              <button class="btn btn-dark btn-block">SIGN UP</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <h3>Mastiff</h3>
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">$50 / mo</h3>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App, Web & Mobile</p>
+              <button class="btn btn-dark btn-block">SIGN UP</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
